--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore these so they're not stored in source control
 .vscode
+node_modules/
 /node_modules/
+/node_modules
+node_modules
 package-lock.json
 /docs/build.css
 /tmp/
